--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -12,7 +12,7 @@ body {
 /*-----------------------------------------------------------------------------------------------------------------------------*/
 header {
 	text-align: center;
-	background-color: #C3DBEC;
+	background-color: #1abc9c;
 	overflow: hidden;
 }
 
@@ -27,7 +27,6 @@ header h1 {
 nav {
   overflow: hidden;
   background-color: #333;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 nav a {
@@ -46,7 +45,7 @@ nav a {
 
 }
 
-.dropdown .dropbtn {
+.dropdown .dropbtn, .checkout {
   font-size: 16px;  
   border: none;
   outline: none;
@@ -64,7 +63,7 @@ nav a:hover, .dropdown:hover .dropbtn {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: white;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -80,13 +79,76 @@ nav a:hover, .dropdown:hover .dropbtn {
   text-align: left;
 }
 
+.checkout {
+	padding: 8px 12px;
+	background-color: transparent;
+	color: black;
+    border-radius: 35px;
+    cursor: pointer;
+    border: 1px solid #1abc9c;
+    float: right;
+    margin-bottom: 10px;
+}
+
+.calculate {
+    border: 1px solid #e67e22;
+    float: left;
+}
+
+
+.checkout:hover {
+	color: white;
+	background-color: #1abc9c;
+	transition-duration: 0.6s;
+    box-shadow: 2px 2px 3px black;
+}
+
+.calculate:hover {
+    background-color: #e67e22;
+}
+
 .dropdown-content a:hover {
-  background-color: #ddd;
+  background-color: white;
 }
 
 .dropdown:hover .dropdown-content {
   display: block;
 }
+
+.cart, .gst {
+	width: 100%;
+	border-collapse: collapse;
+}
+
+.quantity, .price {
+	text-align: center;
+}
+
+th {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-align: left;
+  background-color: #1abc9c;
+  color: white;
+}
+
+td, th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+.total-price, .final-price {
+	background-color: #E0FFFF;
+}
+
+.gst tr {
+	font-weight: bold;
+}
+
+#total-price, #final-price {
+	text-align: center;
+}
+
 /*-----------------------------------------------------------------------------------------------------------------------------*/
 /*                                                              LIST                                                           */
 /*-----------------------------------------------------------------------------------------------------------------------------*/
